# fastapi_atx

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: .env  .gitignore  main.py  requirements.txt  tests.py
backend/api/: auth.py  chores.py  jwt.py
backend/api/auth/: auth_handler.py
backend/api/graphql/: graphql.py  mutations.py  queries.py  routes.py  types.py
backend/api/models/: chore.py  graphql.py  graphql_query_result.py  user.py
backend/data/: db_session.py  load_fake_data.py
backend/data/models/: __all_models.py  apiuser.py  chore.py  oauth.py  user.py
backend/infrastructure/: api_auth.py  cookie_auth.py  jwt.py  oauth.py
backend/services/: chore_service.py  graphql_service.py  user_service.py
backend/static/css/: chore_forms.css  match.css  nav.css  site.css
backend/templates/account/: index.pt  jwt_login.pt  jwt_restricted.pt  login.pt  register.pt
backend/templates/chores/: create.pt  edit.pt  index.pt  selected.pt
backend/templates/home/: about.pt  index.pt
backend/templates/shared/: _layout.pt
backend/viewmodels/: readme.md
backend/viewmodels/account/: account_view_model.py  jwt_login_view_model.py  jwt_restricted_view_model.py  oauth_login_view_model.py  register_view_model.py
backend/viewmodels/chores/: chore_view_model.py
backend/viewmodels/home/: indexviewmodel.py
backend/viewmodels/shared/: viewmodel.py
backend/views/: account.py  chores.py  home.py  jwt.py  oauth.py
docker/backend/: Dockerfile
tests/: test_api.py  test_api_jwt.py  test_graphql.py
(+1 files in other folders)
