[tool.poetry]
name = "fastapi_atx"
version = "0.1.0"
description = "apps built in the Austin FastAPI Developers Meetup group"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
requests = "^2.25.1"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
